# move_vis

./: Cargo.toml  README.md  index.html  movement.d.ts  movement.js  movement_bg.wasm.d.ts
.cargo/: config.toml
examples/movement/: arena.rs  main.rs  player.rs  ui.rs
src/: lib.rs
