[package]
name = "move_vis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bevy_egui = "0.13.0"
bevy_rapier2d = { version = "0.13.0" }
heron = "3.0.0"

[features]
default = ["bevy_rapier"]
bevy_rapier = []
heron = []

[dev-dependencies]
float-ord = "0.3.2"
nalgebra = "*"
