[package]
name = "move_vis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.0", default-features = false }
bevy_egui = "0.15.0"
bevy_rapier2d = { version = "0.16.0" }

[features]
default = ["bevy_rapier"]
bevy_rapier = []

[dev-dependencies]
bevy = { version = "0.8.0", features = [ "dynamic" ] }
float-ord = "0.3.2"
